# hi3516-yolov5-ocr

./: CMakeLists.txt  README.md  clipper.cpp  crnn_process.cc  db_post_process.cc  db_post_process.h  main.cpp  ocr_db_crnn.cc  yolov5_ocr
inc/: ins_nnie_interface.h  sample_nnie_api.h  util.h
libopencv/lib/: libopencv_core.so.3.4  libopencv_flann.so.3.4.1  libopencv_highgui.so.3.4  libopencv_ml.so.3.4  libopencv_photo.so.3.4.1  libopencv_superres.so.3.4  libopencv_video.so.3.4  libopencv_videostab.so.3.4.1
paddle-lite-inference/include/: paddle_use_kernels.h
src/: ins_nnie_interface.cpp  sample_nnie_api.cpp
